--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,5 @@
-name: CI
+name: Build APK
+
 on:
   push:
     branches: [ main ]
@@ -8,35 +9,36 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      used to cache dependencies with a timeout
-name: Get Date
-        id: get-date
+      # Optional: Show date/time in logs
+      - name: Get build date
+        id: date
+        run: echo "date=$(date)" >> $GITHUB_OUTPUT
+
+      # Install system dependencies for buildozer
+      - name: Install dependencies
         run: |
-          echo "::set-output name=date::$(/bin/date -u "+%Y%m%d")"
-        shell: bash
+          sudo apt-get update
+          sudo apt-get install -y python3-pip python3-setuptools python3-wheel \
+            git zip unzip openjdk-17-jdk zlib1g-dev libncurses5-dev libstdc++6 \
+            libffi-dev libssl-dev autoconf libtool pkg-config cmake
 
-name: Cache Buildozer global directory
-        uses: actions/cache@v2
-        with:
-          path: .buildozer_global
-          key: buildozer-global-${{ hashFiles('buildozer.spec') }} # Replace with your path
+      # Install buildozer and Cython
+      - name: Install Buildozer
+        run: |
+          pip install --upgrade pip
+          pip install buildozer cython
 
-uses: actions/cache@v2
-        with:
-          path: .buildozer
-          key: ${{ runner.os }}-${{ steps.get-date.outputs.date }}-${{ hashFiles('buildozer.spec') }}
+      # Build the APK
+      - name: Build APK with Buildozer
+        run: |
+          buildozer android debug
 
-name: Build with Buildozer
-        uses: ArtemSBulgakov/buildozer-action@v1
-        id: buildozer
+      # Upload the generated APK as a GitHub artifact
+      - name: Upload APK
+        uses: actions/upload-artifact@v3
         with:
-          command: buildozer android debug
-          buildozer_version: stable
-
-name: Upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: package
-          path: ${{ steps.buildozer.outputs.filename }}
+          name: kivy-apk
+          path: bin/*.apk
